fix dark mode

--- a/res/style.css
+++ b/res/style.css
@@ -62,6 +62,7 @@ h1 {
 	padding: 16px;
 	background: #ffe;
 	font-weight: bold;
+	color: #000;
 }
 
 hr {
